1.62
    -- Fixed rt21751: test hangs on MSWin32 (Andy Melnikov)
    -- Fixed rt34188: Tests use perlbal management port - so fail
       if perlbal running (Andy Melnikov)
    -- Fixed rt129487: epoll: fix misordered EPOLL_CTL_DEL call
       (Eric Wong, e@80x24.org>
    -- Fixed rt88518: typo fixes (dsteinbrunner@pobox.com)
    -- Fixed rt85715: IPv6 support for local_ip_string
       (ROBN@cpan.org)
    -- Fixed rt129484: deal with EINTR in IO::Poll path
    -- Fixed rt72670: simple optimization by caching pack
       (nicolas.rochelemagne@cpanel.net, bitcard@miuku.net)

1.61 (2008-11-27)
    -- IPv6 support.  At least enough to get Perlbal going.
       Let me know if this is done incorrectly or non-portably!
       (Brad Fitzpatrick; brad@danga.com).

1.60
    -- Keep watching for write after all writing is completed if user
       specifically asked to watch_write (D. Leadbeater)

1.59
   -- Don't keep watching for write after all writing is completed OK
      (Dave Leadbeater)
   -- Reset() now closes the Epoll or KQueue socket (Radu Greab)

1.58
   -- Remove unnecessary bless() calls in tests (5.10 compatibility)
      (msergeant)

1.57
   -- Make tcp_cork be a no-op (rather than exploding) when operating on
      a fd that isn't a network socket (like a local pipe, which doesn't do
      TCP).

1.56
   -- Reset method _still_ wasn't resetting enough.  had to reset the
      EventLoop method as well, so _InitPoller would get called and reset
      stuff.

1.55
   -- Reset method wasn't resetting enough.

1.54 (2006-11-13)
   -- cap sysreads at 1MB, not 5MB.  seems to crash perl less for
      more people.  *sigh*

1.53 (2006-08-24)
   -- Don't allow ->read() if socket has been closed (msergeant).
   -- Added local_ip_string() and local_addr_string() (msergeant).
   -- Removed bogus 'ticker' code from KQueue event loop (msergeant).
   -- Converted comment based docs to POD and fix some of those docs
      to match reality (msergeant).

1.52: (2006-07-09)